syntax = "proto3";

option java_multiple_files = true;
option java_package = "edu.miu.report.hello";
option java_outer_classname = "HelloProto";

package hello;

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
